# ml-blueprint-arch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  FlaskAPItest.postman_collection.json  README.md  app.py  main.py  pyproject.toml  requirements.txt  script.py
data/: dat.pkl  dummy_data.pkl
ml_project/: main.py  script.py
ml_project/src/: data_generation.py
ml_project/tests/: test_data_generation.py  test_model_training.py
models/: reg.joblib  regressor.joblib
notebooks/: data_analysis.ipynb
src/: app.py  data_generation.py  train.py
