[tool.poetry]
name = "ml-blueprint-arch"
version = "0.1.0"
description = "Lightweight package for machine learning project setup example"
authors = ["Jannik hartmann <jannik.hartmann@outlook.de>"]
packages = [{include = "ml_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
statsmodels = "^0.13.5"
scikit-learn = "^1.2.0"
mlflow = "^1.3.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
ipykernel = "^6.19.4"
matplotlib = "^3.6.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
